<resources>
    <string name="app_name">ABAC Connect</string>
    <string name="register">REGISTER</string>
    <string name="action_settings">Settings</string>
    <string name="profile_student_id">Student ID</string>
    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_citizen">Citizen</string>
    <string name="profile_citizen_id">Citizen ID</string>
    <string name="profile_birthday">Date of Birth</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_work">Work</string>
    <string name="profile_position">Position</string>

    <string-array name="list_citizen">
        <item>Citizen</item>
        <item>Passport</item>
    </string-array>

    <string name="PREF_NAME">PRE_NAME</string>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_magazine_fragment">MagazineFragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_new_fragment">NewFragment</string>
    <string name="title_activity_news_fragment">NewsFragment</string>
</resources>
